# PokeRust

./: Cargo.toml  README.md
Evolutions/: 10.json  11.json  12.json  13.json  14.json  15.json  16.json  2.json  3.json  5.json  6.json  7.json  8.json  9.json
src/: main.rs
