[[bin]]
name = "main"
path = "src/main.rs"

[package]
name = "Pokedex"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
serde = "1.0.100"
serde_json = "1.0.40"
serde_derive = "1.0.100"
indicatif = "0.17.0-beta.1"